--- a/FPgrps3.tex
+++ b/FPgrps3.tex
@@ -48,6 +48,7 @@
 \newtheorem{principle}[theorem]{Principle}
 \newtheorem{idea}[theorem]{Idea}
 \newtheorem{proposition}[theorem]{Proposition}
+\newtheorem{remark}[theorem]{Remark}
 %\newtheorem{problem}[theorem]{Problem}
 \usepackage[latin1]{inputenc}
 % oder was auch immer
