--- a/FPgrps2.tex
+++ b/FPgrps2.tex
@@ -617,7 +617,7 @@ We \Struc{sort out coincidences} before we \Alert{define new cosets}.
 \Struc{Direct deductions} are preferable to \Alert{random definitions}.
 
 \pause
-\item An \Struc{definition algorithm} is called a \Alert{strategy}.
+\item A \Struc{definition algorithm} is called a \Alert{strategy}.
 \end{itemize}
 
 \pause
