--- a/FPgrps1.tex
+++ b/FPgrps1.tex
@@ -301,7 +301,7 @@ if and only if
 \Alert{\mbox{in } F=\left<X \mid \right>} \]
 
 \vspace*{-1.5mm}
-for a $k \in \N$ and some $w_i \in \hat X^*$ and $r_i \in R$. 
+for a $k \in \N$ and some $w_i \in \hat X^*$ and $r_i \in R \cup R^{-1}$. 
 
 \pause
 \smallskip
@@ -525,7 +525,7 @@ then $H \cong \Z/(2\Z) \oplus \Z/(6\Z) \oplus \Z \oplus \Z$.
 \pause
 \smallskip
 The matrix $S$ \Struc{recombines the rows of $M$} (changing the
-generators of $H$) and the matrix $T$ 
+generators of the row space) and the matrix $T$ 
 \Struc{changes the generating set of $\Z^n$}. Both manipulations can be
 \Struc{traced explicitly}, yielding an \Alert{explicit, computable
 isomorphism}
