Add number to session.

--- a/GAPsession1.tex
+++ b/GAPsession1.tex
@@ -11,7 +11,7 @@
 \begin{center}
 \large LMS Short Course on Computational Group Theory
 
-\Large Lab session
+\Large Lab session 1
 
 \large Getting to know \GAP
 \end{center}
