--- a/GAPsession2.tex
+++ b/GAPsession2.tex
@@ -12,7 +12,7 @@
 \begin{center}
 \large LMS Short Course on Computational Group Theory
 
-\Large Lab session
+\Large Lab session 2
 
 \large Getting to know \GAP --- first steps with permutation groups
 \end{center}
