Fix transitive issue.

--- a/FPgrps2.tex
+++ b/FPgrps2.tex
@@ -137,11 +137,13 @@ Let $G := \left< X \mid R \right>$. There is a \Struc{bijection}:
    \{ H \le G \mid [G:H] < \infty \}
    &\stackrel{\cong}{\longrightarrow} &
    \{ \varphi : G \to S_n \mid n \in \N, \varphi 
-   \mbox{ a \Alert{grp.~hom.}} \} \\[2mm]
+   \mbox{ a \Alert{grp.~hom.}} \} \\
+   && \mbox{(image transitive)} \\[2mm]
 \pause
    H
    & \longmapsto &
-   \mbox{\Alert{action} on } \{ Hg \mid g \in G \} =: H \backslash G \\[2mm]
+   \mbox{\Alert{trans.~action} on } 
+\{ Hg \mid g \in G \} =: H \backslash G \\[2mm]
 \pause
    \varphi^{-1}(\Stab_{S_n}(1))
    & \longmapsfrom &
