--- a/FPgrps3.tex
+++ b/FPgrps3.tex
@@ -505,10 +505,10 @@ Start with a \Struc{finite RWS} and choose a \Struc{reduction ordering}
 such that $v > w$ for all rules $v \to w$.
 
 \pause
-Consider all possible \Struc{critical pairs} $v_1 \to w_1$ and
-$v_2 \to w_2$, and:
+Consider all possible \Struc{critical pairs} $rs \to w_1$ and
+$st \to w_2$, and:
 \begin{itemize}
-\item \Struc{rewrite} $w_1 \Rightarrow w'_1$ and $w_2 \Rightarrow w'_2$ with
+\item \Struc{rewrite} $w_1t \Rightarrow w'_1$ and $rw_2 \Rightarrow w'_2$ with
 $w'_1$ and $w'_2$ \Alert{irreducible},
 \item if $w'_1 \neq w'_2$, then 
 \begin{itemize}
@@ -518,6 +518,8 @@ $w'_1 \to w'_2$ if $w'_1 > w'_2$,
 $w'_2 \to w'_1$ if $w'_2 > w'_1$.
 \end{itemize}
 \end{itemize}
+\pause
+(and similarly for $rst \to w_1$ and $s \to w_2$)
 \end{block}
 
 \smallskip
